--- a/packages/sql/package.json
+++ b/packages/sql/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignisia/database-core",
+  "name": "@ignisia/sql",
   "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
