--- a/packages/nosql/package.json
+++ b/packages/nosql/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ignisia/mongodb-adapter",
-  "module": "index.ts",
+  "name": "@ignisia/nosql",
+  "module": "src/index.ts",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
