--- a/packages/sql/package.json
+++ b/packages/sql/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@ignisia/sql",
-  "module": "src/index.ts",
+  "module": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
+    "scripts": {
+    "build": "bun run build.ts"
+  },
   "devDependencies": {
+    "@ignisia/utils": "workspace:*",
     "@types/bun": "latest"
   },
   "peerDependencies": {
