--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.22.0",
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.8",
     "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
