--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   ],
   "dependencies": {},
   "scripts": {
+    "build": "bun run --filter \"*\" build",
+    "cleanup": "bun run bin/cleanup.ts",
     "prepare": "husky"
   },
   "lint-staged": {
