--- a/packages/securedb/package.json
+++ b/packages/securedb/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@ignisia/securedb",
-  "module": "src/index.ts",
+  "module": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
+  "scripts": {
+    "build": "bun run build.ts"
+  },
   "dependencies": {
     "@ignisia/encryption": "workspace:*"
   },
   "devDependencies": {
+    "@ignisia/utils": "workspace:*",
     "@ignisia/sql": "workspace:*",
     "@ignisia/nosql": "workspace:*",
     "@types/bun": "latest"
