chore(core): init core packages

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignisia/nosql",
+  "name": "@ignisia/core",
   "module": "dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
