--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -11,6 +11,7 @@
     "@types/bun": "latest",
     "autocannon": "^8.0.0",
     "dayjs": "^1.11.13",
+    "elysia": "^1.2.25",
     "hono": "^4.7.5",
     "systeminformation": "^5.25.11",
     "tree-kill-promise": "^3.0.14"
