--- a/packages/forge/package.json
+++ b/packages/forge/package.json
@@ -7,8 +7,13 @@
     "build": "bun run build.ts"
   },
   "devDependencies": {
+    "@ignisia/core": "workspace:*",
     "@ignisia/utils": "workspace:*",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "peerDependencies": {
     "typescript": "^5"
