--- a/packages/sql/package.json
+++ b/packages/sql/package.json
@@ -2,6 +2,7 @@
   "name": "@ignisia/sql",
   "module": "dist/index.js",
   "types": "./dist/index.d.ts",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "build": "bun run build.ts"
