chore: update package.json to include builds

--- a/packages/encryption/package.json
+++ b/packages/encryption/package.json
@@ -3,7 +3,7 @@
   "module": "dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "scripts": {
     "build": "bun run build.ts"
   },
@@ -13,5 +13,8 @@
   },
   "peerDependencies": {
     "typescript": "^5"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
