--- a/packages/securedb/package.json
+++ b/packages/securedb/package.json
@@ -4,6 +4,33 @@
   "types": "./dist/index.d.ts",
   "version": "0.1.1",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./*": {
+      "import": "./dist/*.js",
+      "types": "./dist/*.d.ts"
+    },
+    "./**/*": {
+      "import": "./dist/**/*.js",
+      "types": "./dist/**/*.d.ts"
+    },
+    "./package.json": "./package.json",
+    "./helper": {
+      "import": "./dist/helper/index.js",
+      "types": "./dist/helper/index.d.ts"
+    },
+    "./nosql": {
+      "import": "./dist/nosql/index.js",
+      "types": "./dist/nosql/index.d.ts"
+    },
+    "./sql": {
+      "import": "./dist/sql/index.js",
+      "types": "./dist/sql/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "bun run build.ts"
   },
