fix(cli): required/optional values parameter definitions

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignisia/cli",
+  "name": "@ignisia/cli-core",
   "module": "dist/index.js",
   "types": "./dist/index.d.ts",
   "version": "0.1.0",
