--- a/packages/sql/package.json
+++ b/packages/sql/package.json
@@ -6,37 +6,45 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "types": "./dist/esm/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.cjs"
     },
     "./*": {
-      "types": "./dist/*.d.ts",
-      "import": "./dist/*.js"
+      "types": "./dist/esm/*.d.ts",
+      "import": "./dist/esm/*.js",
+      "require": "./dist/cjs/*.cjs"
     },
     "./**/*": {
-      "types": "./dist/**/*.d.ts",
-      "import": "./dist/**/*.js"
+      "types": "./dist/esm/**/*.d.ts",
+      "import": "./dist/esm/**/*.js",
+      "require": "./dist/cjs/**/*.cjs"
     },
     "./package.json": "./package.json",
     "./column": {
-      "types": "./dist/column/index.d.ts",
-      "import": "./dist/column/index.js"
+      "types": "./dist/esm/column/index.d.ts",
+      "import": "./dist/esm/column/index.js",
+      "require": "./dist/cjs/column/index.cjs"
     },
     "./database": {
-      "types": "./dist/database/index.d.ts",
-      "import": "./dist/database/index.js"
+      "types": "./dist/esm/database/index.d.ts",
+      "import": "./dist/esm/database/index.js",
+      "require": "./dist/cjs/database/index.cjs"
     },
     "./migration": {
-      "types": "./dist/migration/index.d.ts",
-      "import": "./dist/migration/index.js"
+      "types": "./dist/esm/migration/index.d.ts",
+      "import": "./dist/esm/migration/index.js",
+      "require": "./dist/cjs/migration/index.cjs"
     },
     "./query": {
-      "types": "./dist/query/index.d.ts",
-      "import": "./dist/query/index.js"
+      "types": "./dist/esm/query/index.d.ts",
+      "import": "./dist/esm/query/index.js",
+      "require": "./dist/cjs/query/index.cjs"
     },
     "./table": {
-      "types": "./dist/table/index.d.ts",
-      "import": "./dist/table/index.js"
+      "types": "./dist/esm/table/index.d.ts",
+      "import": "./dist/esm/table/index.js",
+      "require": "./dist/cjs/table/index.cjs"
     }
   },
   "scripts": {
