--- a/packages/encryption/package.json
+++ b/packages/encryption/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ignisia/encryption",
-  "module": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "./dist/index.d.ts",
   "version": "0.1.2",
   "type": "module",
