--- a/packages/replica/package.json
+++ b/packages/replica/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ignisia/replica",
-  "module": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "types": "./dist/index.d.ts",
   "version": "0.1.1",
   "type": "module",
